log
Thu 07 Sep 2023 04:47:56 PM UTC: 
 tests:  0|6
total_score: 0/70
2331379
Thu 07 Sep 2023 04:52:21 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:61: error: expected ‘)’ before ‘;’ token
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |                                    ~                        ^
      |                                                             )
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |             ^~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
f5ca0bc
Thu 07 Sep 2023 04:52:34 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:61: error: expected ‘)’ before ‘;’ token
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |                                    ~                        ^
      |                                                             )
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |             ^~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
cb7b6cd
Thu 07 Sep 2023 04:53:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:56: error: expected ‘)’ before ‘;’ token
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*);
      |                                ~                       ^
      |                                                        )
hashmap.c:57:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*);
      |                ^
hashmap.c:59:14: error: expected ‘;’ before ‘}’ token
   59 |   return map;
      |              ^
      |              ;
   60 | }
      | ~             
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ab6f240
Thu 07 Sep 2023 04:53:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
33060d4
Thu 07 Sep 2023 04:53:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
58904ad
Thu 07 Sep 2023 04:54:42 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
c6741f7
Thu 07 Sep 2023 05:00:38 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de2230f
Thu 07 Sep 2023 05:09:47 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:3: error: ‘indice’ undeclared (first use in this function)
   44 |   indice= hash(key, key->capacity)
      |   ^~~~~~
hashmap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:44:24: error: request for member ‘capacity’ in something not a structure or union
   44 |   indice= hash(key, key->capacity)
      |                        ^~
hashmap.c:44:35: error: expected ‘;’ before ‘Pair’
   44 |   indice= hash(key, key->capacity)
      |                                   ^
      |                                   ;
   45 |   Pair newPair = createPair(key, key->capacity);
      |   ~~~~                             
hashmap.c:47:3: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   47 |   newPair->next= map->buckets[indice];
      |   ^~~~~~~
      |   Pair
Compilation failed
54e9d6c
Thu 07 Sep 2023 05:10:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: request for member ‘capacity’ in something not a structure or union
   44 |   int indice= hash(key, key->capacity)
      |                            ^~
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘Pair’
   45 |   Pair newPair = createPair(key, key->capacity);
      |   ^~~~
hashmap.c:47:3: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   47 |   newPair->next= map->buckets[indice];
      |   ^~~~~~~
      |   Pair
hashmap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8f11c91
Thu 07 Sep 2023 05:10:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: request for member ‘capacity’ in something not a structure or union
   44 |   int indice= hash(key, key->capacity)
      |                            ^~
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘Pair’
   45 |   Pair * newPair = createPair(key, key->capacity);
      |   ^~~~
hashmap.c:47:3: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   47 |   newPair->next= map->buckets[indice];
      |   ^~~~~~~
      |   Pair
hashmap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
03f0267
Thu 07 Sep 2023 05:16:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: request for member ‘capacity’ in something not a structure or union
   44 |   int indice= hash(key, key->capacity)
      |                            ^~
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘Pair’
   45 |   Pair* newPair = createPair(key, value);
      |   ^~~~
hashmap.c:47:3: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   47 |   newPair->next= map->buckets[indice];
      |   ^~~~~~~
      |   Pair
hashmap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9b612fd
Thu 07 Sep 2023 05:16:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: request for member ‘capacity’ in something not a structure or union
   44 |   int indice= hash(key, key->capacity)
      |                            ^~
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘Pair’
   45 |   Pair* newPair = createPair(key, key->capacity);
      |   ^~~~
hashmap.c:47:3: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   47 |   newPair->next= map->buckets[indice];
      |   ^~~~~~~
      |   Pair
hashmap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0f5b73e
